src/objects/OrgChartPlus__MSO_OrgChart2__c.object
<CustomObject>
    <fields>
        <fullName>OrgChartPlus__AutomaticChart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ImportFilter__c</fullName>
        <label>Import Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MSO OrgCharts</relationshipLabel>
        <relationshipName>MSO_OrgCharts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Version__c</fullName>
        <label>Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MSO OrgChart</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSO OrgCharts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>